--- a/app/src/main/res/layout/activity_dashboard_teacher.xml
+++ b/app/src/main/res/layout/activity_dashboard_teacher.xml
@@ -77,6 +77,8 @@
             app:cardElevation="6dp">
 
             <LinearLayout
+                android:id="@+id/profil"
+                android:onClick="onClick1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|center_vertical"
